HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractPredicateNonBool/Expected.uv
//! Expected diagnostic metadata for the ContractPredicateNonBool rejected-source specimen.

expectedDiagnostic("", "rule.15.WF-Contract")
